--- a/app/src/main/res/layout/activity_search_city.xml
+++ b/app/src/main/res/layout/activity_search_city.xml
@@ -64,26 +64,11 @@
             android:layout_marginEnd="20dp"
             android:text="@string/txt_search_gps"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/vw"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_gps"
             app:layout_constraintTop_toTopOf="@+id/vw" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/txt_inform_city"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="150dp"
-            android:layout_marginEnd="20dp"
-            android:text="@string/txt_informe_your_city"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/vw" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/ly_city"
@@ -94,15 +79,19 @@
             android:textColorHint="@color/black"
             app:boxBackgroundColor="@color/white"
             app:hintTextColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_inform_city">
+            app:layout_constraintTop_toBottomOf="@+id/vw"
+            app:layout_constraintVertical_bias="0.38">
 
-            <com.google.android.material.textfield.TextInputEditText
+            <AutoCompleteTextView
+                style="@style/Widget.MaterialComponents.AutoCompleteTextView.FilledBox"
                 android:id="@+id/etd_city"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/hint_city"
+                android:imeOptions="actionDone"
                 android:text="@={viewModel.city}" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -114,14 +103,15 @@
             android:layout_margin="20dp"
             android:activeButton="@{viewModel.button}"
             android:backgroundTint="@color/inactive_button"
-            android:onClick="@{()->viewModel.openActivity()}"
+            android:onClick="@{()->viewModel.openActivity(true)}"
             android:text="@string/btn_continue"
-            android:textColor="@color/black"
+            android:textColor="@color/darker_gray"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ly_city" />
+            app:layout_constraintTop_toBottomOf="@+id/ly_city"
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
